<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="306dp"
        android:layout_height="174dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="36dp"
        android:text="Комплексная система мониторинга здоровья"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txFio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/btnPre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/txtPress"
        app:layout_constraintBottom_toTopOf="@+id/btnHe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSa" />

    <Button
        android:id="@+id/btnHe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/txtHealth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPre" />

    <Button
        android:id="@+id/btnSa"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtSave"
        app:layout_constraintBottom_toTopOf="@+id/btnPre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txAge" />

    <EditText
        android:id="@+id/txFio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="331dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtFIO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/txAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtAge"
        app:layout_constraintBottom_toTopOf="@+id/btnSa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txFio" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txFio"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ris" />

</androidx.constraintlayout.widget.ConstraintLayout>